# sandbox_iso_c_binding

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: set_default_build_type.cmake
src/: CMakeLists.txt  do_stuff_in_c.c  m_do_stuff_wrap.F90  m_mpi_utils.F90
src/fortran_thrust/: CMakeLists.txt  m_wrap_thrust.F90  main.F90  thrust_cuda.cu  thrust_openmp.cpp
src/mpi_fortran_c/: m_do_stuff_wrap.F90  m_mpi_utils.F90  test_mpi.F90
